--- a/src/main/resources/templates/thesis-all-page.html
+++ b/src/main/resources/templates/thesis-all-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Course Project</title>
+    <title th:text="#{courseProject}"></title>
     <style>
        body {
             margin: 0;
@@ -80,15 +80,18 @@
 <body>
     <!-- Navigation bar -->
     <div class="navbar">
-        <a href="/home">Home</a>
-        <a href="/personel/showAll">Personel</a>
-        <a href="/courses/showAll">Courses</a>
-        <a href="/thesis/showAll">Theses</a>
-        <a href="/comments/showAll">Comments</a>
-        <a href="/student/showAll">Students</a>
+        <a href="/home" th:text="#{home}"></a>
+        <a href="/personel/showAll" th:text="#{personel}"></a>
+        <a href="/courses/showAll" th:text="#{courses}"></a>
+        <a href="/thesis/showAll" th:text="#{theses}"></a>
+        <a href="/comments/showAll" th:text="#{comments}"></a>
+        <a href="/student/showAll" th:text="#{students}"></a>
+        <button type="button" th:text="#{switch-en}" th:if="${#locale.toString() != 'en'}" onclick="changeLanguage('en')"></button>
+        <button type="button" th:text="#{switch-lv}" th:if="${#locale.toString() != 'lv'}" onclick="changeLanguage('lv')"></button>
     </div>
 
-   <!-- Main content -->
+
+    <!-- Main content -->
     <div class="content">
         
 
@@ -96,16 +99,16 @@
     <table>
         <tr>
             <th>ID</th>
-            <th>Nosaukums latviski</th>
-            <th>Nosaukums angliski</th>
-            <th>Mērķis</th>
-            <th>Uzdevums</th>
-            <th>Iesniegsanas datums</th>
-            <th>Supervisor statuss</th>
-            <th>Statuss</th>
-            <th>Apstiprināšanas datums</th>
-            <th>Studenta ID</th>
-            <th>Personāža ID</th>
+            <th th:text="#{titleInLv}"></th>
+            <th th:text="#{titleInEn}"></th>
+            <th th:text="#{goal}"></th>
+            <th th:text="#{mission}"></th>
+            <th th:text="#{dateOfSubmit}"></th>
+            <th th:text="#{supervisorStatus}"></th>
+            <th th:text="#{status}"></th>
+            <th th:text="#{acceptDate}"></th>
+            <th th:text="#{studentId}"></th>
+            <th th:text="#{personalId}"></th>
         </tr>
         <tr th:each="thesis : ${thesis}">
             <td th:text="${thesis.thesis_id}"></td>
@@ -129,16 +132,16 @@
             </td>
 			<td>
 			    <form th:action="@{/thesis/remove/{thesis_id}(thesis_id=${thesis.thesis_id})}" th:method="post">
-			         <input type="submit" value="Izdzēst"/>
+			         <input type="submit" th:text="#{delete}"/>
 			    </form>
 			    <form th:action="@{/thesis/update/{thesis_id}(thesis_id=${thesis.thesis_id})}" th:method="get">
-			         <input type="submit" value="Atjaunot"/>
+			         <input type="submit" th:text="#{renew}"/>
 			    </form>
 			</td>
         </tr>
     </table>
     
-     <a class="btn" th:href="@{/thesis/insertNew}">Pievienot Jaunu</a>
+     <a class="btn" th:href="@{/thesis/insertNew}" th:text="#{addNew}"></a>
     
 </div>
         
@@ -149,6 +152,11 @@
 
     
     <script>
+        function changeLanguage(language) {
+            var url = window.location.href.split('?')[0] + '?localeData=' + language;
+            window.location.href = url;
+        }
+
 
     </script>
     
