--- a/src/main/resources/templates/insert-new-personel.html
+++ b/src/main/resources/templates/insert-new-personel.html
@@ -116,23 +116,15 @@
 <body>
     <!-- Navigation bar -->
     <div class="navbar">
-<<<<<<< HEAD
+
         <a href="/home" th:text="#{home}"></a>
         <a href="/personel/showAll" th:text="#{personel}"></a>
         <a href="/courses/showAll" th:text="#{courses}"></a>
         <a href="/thesis/showAll" th:text="#{theses}"></a>
         <a href="/comments/showAll" th:text="#{comments}"></a>
         <a href="/student/showAll" th:text="#{students}"></a>
+        <a class="logout" href="http://localhost:8080/logout" th:text="#{logout}"></a>
 
-=======
-        <a href="/home">Home</a>
-        <a href="/personel/showAll">Personel</a>
-        <a href="/courses/showAll">Courses</a>
-        <a href="/thesis/showAll">Theses</a>
-        <a href="/comments/showAll">Comments</a>
-        <a href="/student/showAll">Students</a>
-        <a class="logout" href="http://localhost:8080/logout">Log out</a>
->>>>>>> f623841a0325b19c9f18e2e0d7e592854abe34c8
     </div>
 
    <!-- Main content -->
