--- a/src/main/resources/templates/student-one-page.html
+++ b/src/main/resources/templates/student-one-page.html
@@ -4,117 +4,156 @@
     <title>Course Project</title>
     <style>
         body {
-             margin: 0;
-             padding: 0;
-             font-family: Arial, sans-serif;
-         }
- 
-         .navbar {
-             background-color: #333;
-             overflow: hidden;
-         }
- 
-         .navbar a {
-             float: left;
-             color: #fff;
-             text-align: center;
-             padding: 14px 16px;
-             text-decoration: none;
-             font-size: 16px;
-         }
- 
-         .navbar a:hover {
-             background-color: #4CAF50;
-             color: #333;
-         }
-         
-         .navbar .logout {
-	        float: right;
-	        margin-right: 60px; 
-	    }
- 
-         .content {
-             padding: 20px;
-         }
- 
-         .container {
-             background-color: #222;
-             color: #fff;
-             padding: 20px;
-         }
- 
-         table {
-             width: 100%;
-             border-collapse: collapse;
-         }
- 
-         th, td {
-             padding: 10px;
-             text-align: left;
-             border-bottom: 1px solid #4CAF50;
-         }
- 
-         th {
-             background-color: #4CAF50;
-             color: #fff;
-         }
- 
-         tr:nth-child(even) {
-             background-color: #333;
-         }
- 
-         tr:hover {
-             background-color: #4CAF50;
-             color: #fff;
-         }
-     </style>
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .navbar a {
+            float: left;
+            color: #fff;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 16px;
+        }
+
+        .navbar a:hover {
+            background-color: #4CAF50;
+            color: #333;
+        }
+
+        .navbar .logout {
+            float: right;
+            margin-right: 60px;
+        }
+
+        .content {
+            padding: 20px;
+        }
+
+        .container {
+            background-color: #222;
+            color: #fff;
+            padding: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #4CAF50;
+        }
+
+        th {
+            background-color: #4CAF50;
+            color: #fff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #333;
+        }
+
+        tr:hover {
+            background-color: #4CAF50;
+            color: #fff;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 4px;
+            border: none;
+            font-size: 14px;
+        }
+
+        .btn:hover {
+            background-color: #45a049;
+        }
+
+        .delete-form {
+            display: inline-block;
+        }
+
+        .btn-group {
+            display: inline-block;
+            margin-right: 5px;
+        }
+
+        /* Additional style for the "Back" button */
+        .btn-back {
+            display: block;
+            margin-top: 10px;
+            width: 35px;
+        }
+    </style>
 </head>
 <body>
-    <!-- Navigation bar -->
-    <div class="navbar">
+<!-- Navigation bar -->
+<div class="navbar">
+    <a href="/home" th:text="#{home}"></a>
+    <a href="/personel/showAll" th:text="#{personel}"></a>
+    <a href="/courses/showAll" th:text="#{courses}"></a>
+    <a href="/thesis/showAll" th:text="#{theses}"></a>
+    <a href="/comments/showAll" th:text="#{comments}"></a>
+    <a href="/student/showAll" th:text="#{students}"></a>
+    <button type="button" th:text="#{switch-en}" th:if="${#locale.toString() != 'en'}" onclick="changeLanguage('en')"></button>
+    <button type="button" th:text="#{switch-lv}" th:if="${#locale.toString() != 'lv'}" onclick="changeLanguage('lv')"></button>
+    <a class="logout" href="http://localhost:8080/logout" th:text="#{logout}"></a>
+</div>
 
-        <a href="/home" th:text="#{home}"></a>
-        <a href="/personel/showAll" th:text="#{personel}"></a>
-        <a href="/courses/showAll" th:text="#{courses}"></a>
-        <a href="/thesis/showAll" th:text="#{theses}"></a>
-        <a href="/comments/showAll" th:text="#{comments}"></a>
-        <a href="/student/showAll" th:text="#{students}"></a>
-        <button type="button" th:text="#{switch-en}" th:if="${#locale.toString() != 'en'}" onclick="changeLanguage('en')"></button>
-        <button type="button" th:text="#{switch-lv}" th:if="${#locale.toString() != 'lv'}" onclick="changeLanguage('lv')"></button>
-        <a class="logout" href="http://localhost:8080/logout" th:text="#{logout}"></a>
+<!-- Main content -->
+<div class="content">
+    <div class="container" th:if="${MyStudentByMatriculaNo != null}">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th th:text="#{name}"></th>
+                <th th:text="#{surname}"></th>
+                <th th:text="#{personalCode}"></th>
+                <th th:text="#{matriculaNr}"></th>
+                <th>Actions</th>
+            </tr>
+            <tr>
+                <td th:text="${MyStudentByMatriculaNo.personId}"></td>
+                <td th:text="${MyStudentByMatriculaNo.personName}"></td>
+                <td th:text="${MyStudentByMatriculaNo.surname}"></td>
+                <td th:text="${MyStudentByMatriculaNo.personalCode}"></td>
+                <td th:text="${MyStudentByMatriculaNo.matriculaNo}"></td>
+                <td>
+                    <div class="btn-group">
+                        <a class="btn" th:href="@{'/student/update/' + ${MyStudentByMatriculaNo.matriculaNo}}">Update</a>
+                    </div>
 
+                    <div class="btn-group delete-form">
+                        <form method="post" th:action="@{'/student/remove/' + ${MyStudentByMatriculaNo.matriculaNo}}">
+                            <button type="submit" class="btn" onclick="return confirm('Are you sure you want to delete this student?')">Delete</button>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <a class="btn btn-back" th:href="@{/student/showAll}">Back</a>
     </div>
+</div>
 
-    <!-- Main content -->
-    <div class="content">
-        <div class="container" th:if="${MyStudentByMatriculaNo != null}">
-            <table>
-                <tr>
-                    <th>ID</th>
-                    <th th:text="#{name}"></th>
-                    <th th:text="#{surname}"></th>
-                    <th th:text="#{personalCode}"></th>
-                    <th th:text="#{matriculaNr}"></th>
-                </tr>
-                <tr>
-                    <td th:text="${MyStudentByMatriculaNo.personId}"></td>
-                    <td th:text="${MyStudentByMatriculaNo.personName}"></td>
-                    <td th:text="${MyStudentByMatriculaNo.surname}"></td>
-                    <td th:text="${MyStudentByMatriculaNo.personalCode}"></td>
-                    <td th:text="${MyStudentByMatriculaNo.matriculaNo}"></td>
-                </tr>
-            </table>
-        </div>
-    </div>
-
-    <script>
-
-        function changeLanguage(language) {
-            var url = window.location.href.split('?')[0] + '?localeData=' + language;
-            window.location.href = url;
-        }
-    </script>
-
+<script>
+    function changeLanguage(language) {
+        var url = window.location.href.split('?')[0] + '?localeData=' + language;
+        window.location.href = url;
+    }
+</script>
 
 </body>
 </html>
